[package]
name = "vizia_style"
description = "The style components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cssparser = "0.34"
cssparser-color = "0.2"
skia-safe = { version = "0.81", features = ["gl", "textlayout", "svg"] }
selectors = "0.26"
# morphorm = {path = "../../../morphorm"}
morphorm = { git = "https://github.com/vizia/morphorm", branch = "alternate", rev = "db55137d4176b9df03b8803f4d2a52da2631ab4e" }
bitflags = "2.8"
precomputed-hash = "0.1"
fxhash = "0.2"

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.81"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[lints]
workspace = true
